# zz

./: .gitignore  Cargo.toml  MANUAL_VERIFICATION.md  README.md  SPEC-API.md  SPEC-BACKEND-FIX.md  SPEC-INTEGRATION.md  SPEC-TOKENS-API.md  SPEC-TOKENS-DEPLOY.md  SPEC-TOKENS-DETAILS.md  SPEC-TOKENS-FRONTEND.md  SPEC-TOKENS-TESTING.md  SPEC-TOKENS.md  SPEC-UI-IMPL.md  SPEC-UI.md  SPEC.md  build.rs  config.toml.example  goal.md
.claude/: superpower-loop.local.md
.windsurf/workflows/: README.md  activate-roadmap-item.md  breakdown-active-work.md  complete-and-archive-task.md  review-delivery-completion.md  route-task-by-status.md  scope-active-task.md  start-new-task.md  sync-active-work-with-code.md
docs/: README.md
docs/active-work/: README.md  worklist.md
docs/completed/: README.md
docs/dev/: README.md  api-converter.md
docs/process/: README.md  agent-skills.md  delivery-review-checklist.md  document-frontmatter-standard.md  (+4 more)
src/: admin.rs  admin_api.rs  config.rs  converter.rs  cors.rs  error.rs  lib.rs  logging.rs  main.rs  provider.rs  proxy.rs  request_journal.rs  rewriter.rs  router.rs  stats.rs  stream.rs  trace_layer.rs  ws.rs
tests/: config_defaults.rs  config_new_fields.rs  converter_telemetry.rs  integration_conversion_a2o.rs  integration_conversion_degradation.rs  integration_conversion_o2a.rs  integration_no_matching_provider.rs  integration_stream_a2o.rs  integration_v1_passthrough.rs  protocol_conversion_audit.rs  responses_chat_conversion.rs
ui/: DESIGN-SPEC.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+131 files in other folders)
