[package]
name = "zz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full", "macros", "net", "rt-multi-thread", "time"], default-features = false }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
thiserror = "2.0.18"
rand = { version = "0.10.0", features = ["thread_rng"] }
bytes = "1.11.1"
futures-util = "0.3.32"
tokio-rustls = "0.26.4"
hyper-rustls = "0.27.7"
rustls-native-certs = "0.8.3"
futures-core = "0.3.32"
serde_json = "1.0.149"
